@@ -8,6 +8,10 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_02-dev
 
+send_fd() will now accept an optional length argument
+
+added set_last_modifed() method
+
 HTTP_NOT_MODIFED added to Apache::Constants EXPORT_OK, removed
 duplicate HTTP_NOT_ACCEPTABLE entry
 
